tests/NormalTests/paczka2/big_fuzzy/70710992.err
Error in line 4: G9dY S933 20,1
Error in line 3: tLa3f5g A742 8,4
Error in line 5: G9dY A742 93,6
Error in line 10: yWAs8z5m A742 25,0
Error in line 7: tLa3f5g S933 19,6
Error in line 6: 5SE2QnJH A742 56,6
Error in line 17: yWAs8z5m S933 208,3
Error in line 24: tLa3f5g A751 63,1
Error in line 26: tLa3f5g S933 76,5
Error in line 27: G9dY S696 38,5
Error in line 34: G9dY A742 6,4
Error in line 29: S933 A742 89,6
Error in line 35: G9dY S696 18,0
Error in line 42: losBd9zHRr A742 89,9
Error in line 48: S933 S696 35,4
Error in line 66: losBd9zHRr S>9> 17,4
Error in line 63: 5SE2QnJH S696 5,0
Error in line 67: losBd9zHRr S933 88,2
Error in line 72: losBd9zHRr S696 28,0
Error in line 70: 5SE2QnJH A751 34,7
Error in line 64: tLa3f5g A751 25,0
Error in line 93: 5SE2QnJH S6N6 17,6
Error in line 79: 5SE2QnJH S696 25,0
Error in line 73: 0I1d S696 280,3
Error in line 105: G9dY A751 16,2
Error in line 113: yWAs8z5m A742 72,2
Error in line 119: G9dY S696 85,7
Error in line 122: 5SE2QnJH A742 180,9
Error in line 136: 5SE2QnJH S696 -4,4
Error in line 131: 0I1d A742 90,0
Error in line 135: 5SE2QnJH S696 608,2
Error in line 145: losBd9zHRr S696 71,4
Error in line 171: 0I1d SN33 47,2
Error in line 169: 0I1d A742 350,5
Error in line 175: 5SE2QnJH S696 6,2
Error in line 177: yWAs8z5m S933 0,0
Error in line 179: tLa3f5g S696 86,0
Error in line 172: 0I1d S933 220,4
Error in line 181: yWAs8z5m A742 93,3
Error in line 194: S933 S933 60,3
Error in line 193: 5SE2QnJH A742 42,5
Error in line 206: 0I1d S696 40,1
Error in line 212: yWAs8zjm A7j1 91,0
Error in line 209: 0I1d A751 35,4
Error in line 202: tLa3f5g S933 40,6
Error in line 215: S933 A742 67,7
Error in line 216: tLa3f5g A751 36,3
Error in line 225: S933 S696 91,3
Error in line 218: losBd9zHRr A742 84,4
Error in line 228: losBd9zHRr A751 2,2
Error in line 232: losBd9zHRr S933 28,7
Error in line 235: losBd9zHRr S696 16e,7
Error in line 208: yWAs8z5m A751 75,8
Error in line 238: yWAs8z5m S933 86,0
Error in line 239: yWAs8z5m A751 67,1
Error in line 245: yWAs8z5m S933 67,3
